--- a/awesomebonus/vignettes/ridgereg.Rmd
+++ b/awesomebonus/vignettes/ridgereg.Rmd
@@ -70,6 +70,7 @@ linregFit
 
 Now, we will fit a linear regression model with forward selection of covariates on the *training* dataset.
 ```{r}
+library(leaps)
 linforFit <- train(medv ~ .,
                    data= training,
                    method = 'leapForward', # to fit linear regression with forward selection
